# sdk-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
astrid-sdk/: Cargo.toml  README.md
astrid-sdk-macros/: Cargo.toml  README.md
astrid-sdk-macros/src/: lib.rs
astrid-sdk/src/: fs.rs  lib.rs  net.rs
astrid-sdk/src/types/: sdk_types.rs
astrid-sys/: Cargo.toml  README.md
astrid-sys/src/: lib.rs
wit/: context-engine.wit  context.wit  hook-lifecycle.wit  identity.wit  llm.wit  prompt-assembly.wit  prompt.wit  registry.wit  session.wit  tool-execution.wit  tool.wit  types.wit
