[package]
name = "astrid-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "System SDK for building User-Space Capsules for Astrid OS"

[dependencies]
astrid-sdk-macros = { workspace = true, optional = true }
astrid-sys = { workspace = true }
astrid-types = { workspace = true }
borsh = { version = "1.0.0", features = ["derive"] }
extism-pdk = "1.4"
rmp-serde = "1.3.0"
schemars = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["derive"]
derive = ["dep:astrid-sdk-macros"]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
