[package]
name = "astrid-sys"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Raw FFI bindings (Airlocks) for the Astrid OS Microkernel"

[dependencies]
extism-pdk = "1.4"

[lints]
workspace = true
